javaDSL/src/test/resources/typeSystemTestModels/valid/constructors/ConstructorsNoDuplicateSignature.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.constructors;

public class ConstructorsNoDuplicateSignature {

  public ConstructorsNoDuplicateSignature(){

  }

  public ConstructorsNoDuplicateSignature(int n) {

  }
}
