javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/First.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class First<T> {

}
